fixed the status messages so that they should be cleared properly.

fixed disconnected imap autocaching. 

caching messages when using disconnected imap no longer marks the messages
as read.

made some implementation changes to the way that disconnected imap folders
are loaded.  this should result in a fairly substantial performace increase
for large folders.

moved saving emails to a sent folder from the AWTEvent thread to the 
appropriate FolderThread.

fixed the CachingFolderInfo to work with the new display system.

020322 release
--------------

made it so replying to or forwarding messages with only html content results
in the inclusion of the html code.  best i can do for now.

fixed a bug in the search window display in which read messages were included
in the unread message count.

switched the popup menus from checking to see if the event is a right
click to actually checking the isPopupTrigger() method.

changed the new message icon, the folder->Update title to folder->Get
New Messages, and put a new Get New Messages icon on the FolderDisplay.

some properties of the UserProfile, such as the selected sent folder and
the selected mail server, used to require a restart to change them.  they
now change without a restart.

changed the selection of things like the sent folder, trash folder, etc.,
to use only already subscribed folders.

made it so doing an open action on the folder node actually makes sure
that the Folder is in an OPEN state.

changed the display of newly received messages.  now if you try to display
messages before they're loaded, instead of loading the messages on the
AWT thread, you just show 'loading' for each frame.  when the table info
is loaded, the FolderDisplay gets updated with the new values.

made it so that the ReadMessageDisplay only populates one JEditorPane,
instead of 2 like it used to.

made it so that the main Pooka window shouldn't change size between 
starts as often.
